--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Configuration de la base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_db?useSSL=false&serverTimezone=UTC
+# Configuration de la base de données(ticket_db?useSSL=false&serverTimezone=UTC)²
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +8,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Notification SMPT
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=koneamidou27@gmail.com
+spring.mail.password=jlxk ipgw sozh makv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from=koneamidou27@gmail.com
